# tai-pocs

./: .gitignore  README.md
src/: agent_db.sqlite  audio_latency.ipynb  context_latency.ipynb  game_events_realistic.ipynb  kill_events_realistic.ipynb  knowledge_bases.ipynb  pyproject.toml  requirements.txt  setup.cfg
src/application/: __main__.py  agent_service_db.sqlite3  alembic.ini  aws.py  db_models.py  game.py  models.py  types.py  utils.py
src/application/alembic/: env.py
src/application/alembic/versions/: c622861f8158_auto_migration.py
src/application/dataclasses/: game_state_event.py
src/application/dtos/: agent_service_config.py  game_state_event.py
src/application/mp3_player/: mp3_player.py
src/application/mp3_player/30-70/: script.py
src/data/: kills.csv  playground.json  user_nicknames.json
src/output/audio/2025-02-18_13-34-44/: config.json
src/output/text/: 1736861007-amazon.nova-pro-v1:0.txt  1736861103-anthropic.claude-v2.txt  1736958162-amazon.nova-pro-v1:0.txt  1736958223-anthropic.claude-v2.txt  1738247452-anthropic.claude-3-5-sonnet-20240620-v1:0.txt  context-latency-dialogue.txt  realistic-kill-events-dialogue.txt  realistic-kill-events-high-temp-dialogue.txt
src/output/text/2025-02-18_13-34-44/: config.json  dialogue.json  dialogue.txt
src/output/text/RAG/: 1738252366-amazon.nova-pro-v1:0.txt
src/output/text/amazon.nova-pro-v1:0-0.9-3-1-10/: [30.0% toxic, 70.0% funny]-dialogue.json  [30.0% toxic, 70.0% funny]-dialogue.txt
src/output/text/anthropic.claude-3-5-sonnet-20240620-v1:0-0.9-3-1-10/: [30.0% toxic, 70.0% funny]-dialogue.json  [30.0% toxic, 70.0% funny]-dialogue.txt
