[project]
name = "tai-pocs"
version = "0.0.1"
description = "POCs for QORPO AI Agents"
authors = [
    { name = "Akim Malyshchyk", email = "akim.malyshchyk@qorpo.world" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "boto3 (>=1.36.18,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)"
]

[tool.poetry.dependencies]
qorpo-data-structures = { git = "https://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@github.com/QORPO-WORLD/qorpo-data-structures.git", branch = "develop" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "E261"]
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".env",
    "env",
    "venv",
    "env",
    "*.pyc",
    "*.egg-info",
    "*.egg",
    "build",
    "dist",
]

[tool.isort]
skip = [".tox", "__pycache__", "build", "dist", ".venv", "venv", ".env", "env"]
profile = "black"

[tool.black]
line-length = 140

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
where = ["."]
include = ["application", "tests"]
exclude = []
namespaces = false