[flake8]
ignore = E203, E266, E501, W503, E261
exclude = .tox,.git,__pycache__,.venv,venv,.env,env,venv,env,*.pyc,*.egg-info,*.egg,build,dist

[isort]
skip = 
    .tox
    __pycache__
    build
    dist
    .venv
    venv
    .env
    env
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=140

[black]
line-length = 140


[options.entry_points]
console_scripts =
    cliq = application.cli.main:qwapp_cli
